--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,47 @@
-# Compiled class file
-*.class
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Log file
-*.log
+# compiled output
+/dist
+/tmp
+/out-tsc
 
-# BlueJ files
-*.ctxt
+# dependencies
+/node_modules
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+*.iml
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# misc
+/.angular/cache
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+testem.log
+/typings
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+# System Files
+.DS_Store
+Thumbs.db
+
+# OWASP
+/dependency-check-*
