--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "ngx-bootstrap": "^10.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "three": "^0.119.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.3",
