--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0",
-    "three": "^0.119.1"
+    "three": "^0.119.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.3",
